[gd_scene load_steps=19 format=2]

[ext_resource path="res://temp/startmenu.png" type="Texture" id=1]
[ext_resource path="res://temp/bird0.png" type="Texture" id=2]
[ext_resource path="res://temp/seed.png" type="Texture" id=3]
[ext_resource path="res://temp/bird1.png" type="Texture" id=4]
[ext_resource path="res://temp/cloud 1.png" type="Texture" id=5]
[ext_resource path="res://scripts/menu.gd" type="Script" id=6]
[ext_resource path="res://temp/logo.png" type="Texture" id=7]
[ext_resource path="res://temp/credits btn.png" type="Texture" id=8]
[ext_resource path="res://temp/sky.png" type="Texture" id=9]
[ext_resource path="res://temp/cloud 3.png" type="Texture" id=10]
[ext_resource path="res://temp/start btn.png" type="Texture" id=11]
[ext_resource path="res://temp/credits_names.png" type="Texture" id=12]
[ext_resource path="res://temp/sun.png" type="Texture" id=25]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 685, 105 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../bird_loc:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1413, 482 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../bird_loc/Seed:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Camera2D:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../bird_loc/bird:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -48.3145, -467.563 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../fade:color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../CreditsNames:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../CreditsNames:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1604, 462 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "bird_enter"
length = 22.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../bird_loc:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1413, 482 ), Vector2( 780, 482 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../bird_loc/Seed:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 8, 19.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1411.35, 1553.44 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Camera2D:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 8, 19.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 220 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../bird_loc/bird:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 8, 20 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -48.3145, -467.563 ), Vector2( -4352.09, -2188.95 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../fade:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 20, 22 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("..")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 22 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "toGame"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "credits"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("../CreditsNames:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CreditsNames:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 4.5 ),
"transitions": PoolRealArray( 0.116629, 7.21001, 1 ),
"update": 0,
"values": [ Vector2( 1604, 462 ), Vector2( 700, 462 ), Vector2( -400, 462 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Logo:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Control:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "sun"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 0.554785, 2.14355, 0.307786 ),
"update": 0,
"values": [ Vector2( 685, 105 ), Vector2( 685, 163 ), Vector2( 685, 105 ) ]
}

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Menu" type="Node2D"]
script = ExtResource( 6 )

[node name="animation_sun" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sun")
autoplay = "sun"
playback_speed = 1.3
anims/RESET = SubResource( 1 )
anims/bird_enter = SubResource( 3 )
anims/credits = SubResource( 5 )
anims/sun = SubResource( 2 )

[node name="Daynight" type="Sprite" parent="."]
position = Vector2( 775, 1803 )
rotation = 3.55349
scale = Vector2( 1.7463, 2.2646 )
texture = ExtResource( 9 )
offset = Vector2( 3.959, 34.808 )

[node name="Startmenu" type="Sprite" parent="."]
position = Vector2( 666, 549 )
scale = Vector2( 1.21299, 1.21299 )
texture = ExtResource( 1 )

[node name="Sun" type="Sprite" parent="."]
position = Vector2( 685, 105 )
scale = Vector2( 1.2675, 1.2675 )
texture = ExtResource( 25 )

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 640.102, 341.59 )
texture = ExtResource( 7 )

[node name="Cloud2" type="Sprite" parent="."]
position = Vector2( 1317, 96 )
scale = Vector2( 1.64976, 1.41938 )
texture = ExtResource( 5 )
offset = Vector2( -44.3935, -27.3659 )

[node name="Cloud3" type="Sprite" parent="."]
position = Vector2( 542.958, 93 )
scale = Vector2( 1.34026, 1.34026 )
texture = ExtResource( 10 )
offset = Vector2( 58.3805, -36.4878 )

[node name="Cloud4" type="Sprite" parent="."]
position = Vector2( 1018, 58 )
scale = Vector2( 1.25112, 1.22864 )
texture = ExtResource( 5 )
offset = Vector2( -44.3935, -27.3659 )

[node name="Cloud1" type="Sprite" parent="."]
position = Vector2( 298, 65 )
scale = Vector2( 1.82389, 1.53631 )
texture = ExtResource( 5 )
offset = Vector2( -44.3935, -27.3659 )

[node name="bird_loc" type="Node2D" parent="."]
position = Vector2( 1413, 482 )
rotation = -0.380482
scale = Vector2( 0.192222, 0.192222 )

[node name="Seed" type="Sprite" parent="bird_loc"]
texture = ExtResource( 3 )

[node name="bird" type="AnimatedSprite" parent="bird_loc"]
position = Vector2( -48.3145, -467.563 )
rotation = 0.380482
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 480 )
current = true

[node name="CreditsNames" type="Sprite" parent="."]
position = Vector2( 1604, 462 )
texture = ExtResource( 12 )

[node name="fade" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 960.0
color = Color( 0, 0, 0, 0 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="Control"]
margin_left = 456.0
margin_top = 557.0
margin_right = 199.0
margin_bottom = 525.0

[node name="start" type="TextureButton" parent="Control/MarginContainer"]
margin_right = 390.0
margin_bottom = 100.0
texture_normal = ExtResource( 11 )
stretch_mode = 4

[node name="MarginContainer2" type="MarginContainer" parent="Control"]
margin_left = 455.0
margin_top = 685.0
margin_right = 321.0
margin_bottom = 554.0

[node name="credits" type="TextureButton" parent="Control/MarginContainer2"]
margin_right = 390.0
margin_bottom = 100.0
texture_normal = ExtResource( 8 )

[connection signal="button_down" from="Control/MarginContainer/start" to="." method="_on_start_button_down"]
[connection signal="button_down" from="Control/MarginContainer2/credits" to="." method="_on_credits_button_down"]
